--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,8 @@ dependencies:
   intl: ^0.16.1
   characters: ^1.0.0
   http: ^0.12.2
+  carousel_slider: ^2.3.1
+  intro_slider: ^2.3.3
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
