--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   http: ^0.12.2
   carousel_slider: ^2.3.1
   intro_slider: ^2.3.3
+  url_launcher: ^5.7.2
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -75,6 +76,13 @@ flutter:
         - asset: assets/fonts/Lato-Regular.ttf
         - asset: assets/fonts/Lato-Bold.ttf
           weight: 700
+    - family: Aquire
+      fonts:
+        - asset: assets/fonts/AquireBold.otf
+          weight: 900
+        - asset: assets/fonts/AquireLight.otf
+          weight: 700
+        - asset: assets/fonts/Aquire.otf
   
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
