--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,8 @@ dependencies:
   carousel_slider: ^2.3.1
   intro_slider: ^2.3.3
   url_launcher: ^5.7.2
+  shared_preferences: ^0.5.12
+
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
